# dataAnalyticsProjects

./: .gitignore
HANZEanalytics/: Makefile  README.md  pyproject.toml
HANZEanalytics/conf/: data.yaml  gis.yaml
HANZEanalytics/data/: events.csv  hanze_ref.csv  s1_countries.csv  s4_currencies.csv
HANZEanalytics/data/flood_regions_2010/: HANZE_floods_regions_2010.shx
HANZEanalytics/notebooks/: scratch.ipynb
HANZEanalytics/src/HANZEanalytics/data/: get_data.py  utils.py
HANZEanalytics/src/HANZEanalytics/eda/: plots.py
